syntax = "proto3";

option java_multiple_files = true;
option java_package = "dk.via.JavaDAO.Status";
option csharp_namespace = "Protobuf";

    package Status;

service StatusService {
  rpc GetStatusMethod(StatusRequest) returns (StatusMessage) {}
}

message StatusRequest {}

message StatusMessage {
  string status = 1;
  string message = 2;
  string data = 3;
}
